edit : FEDIG 추천 전략 로직 수정 #138